# engine

./: .gitignore  CMakeLists.txt
cmake/: fetch_dependencies.cmake
cmake/dependencies/: eglregistry.cmake  glfw.cmake  glm.cmake  glregistry.cmake  imgui.cmake  jsoncpp.cmake  lodepng.cmake
include/: CMakeLists.txt  application.h  batchrenderer.h  config.h  device.h  engine.h  glapi.h  guirenderer.h  input.h  keys.h  logger.h  logger.hpp  shader.h  sprite.h  texture.h  window.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  application.cpp  config.cpp  input.cpp  logger.cpp  window.cpp
src/gfx/: CMakeLists.txt  batchrenderer.cpp  device.cpp  glapi.cpp  guirenderer.cpp  shader.cpp  sprite.cpp  texture.cpp
src/gfx/shaders/: CMakeLists.txt  batch_renderer_fs.h  batch_renderer_vs.h  gui_renderer_fs.h  gui_renderer_vs.h
src/helpers/: CMakeLists.txt  fileBuffer.cpp  fileBuffer.h  tileset.cpp  tileset.h
